--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
     "name": "nhentai",
-    "version": "1.1.1",
+    "version": "1.1.2",
     "description": "An API wrapper for nhentai.net",
     "main": "lib/index.js",
     "types": "types/index.d.ts",
     "scripts": {
         "test": "mocha -t 10000 -r ts-node/register tests/*.spec.ts",
-        "lint": "tslint -p tsconfig.json",
+        "lint": "eslint -c .eslintrc --ext .ts src",
         "build": "rm -rf lib/** && tsc"
     },
     "engines": {
@@ -33,15 +33,14 @@
         "@types/chai-as-promised": "^7.1.3",
         "@types/mocha": "^8.0.4",
         "@types/node-fetch": "^2.5.7",
+        "@typescript-eslint/eslint-plugin": "^4.9.0",
+        "@typescript-eslint/parser": "^4.9.0",
         "chai": "^4.2.0",
         "chai-as-promised": "^7.1.1",
-        "copyfiles": "^2.4.0",
+        "eslint": "^7.14.0",
         "mocha": "^8.2.1",
-        "prettier": "^2.1.2",
-        "ts-node": "^9.0.0",
-        "tslint": "^6.1.3",
-        "tslint-config-prettier": "^1.18.0",
-        "typescript": "^4.0.5"
+        "ts-node": "^9.1.0",
+        "typescript": "^4.1.2"
     },
     "repository": {
         "type": "git",
