--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,3 @@
 {
-    "extends": ["plugin:@typescript-eslint/recommended"],
-    "rules": {
-        // temporarily
-        "@typescript-eslint/no-explicit-any": "off",
-        "@typescript-eslint/explicit-module-boundary-types": "off"
-    }
+    "extends": ["plugin:@typescript-eslint/recommended"]
 }
