--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,7 +2,7 @@
     "$schema": "http://json.schemastore.org/prettierrc",
     "arrowParens": "avoid",
     "singleQuote": true,
-    "trailingComma": "all",
+    "trailingComma": "none",
     "tabWidth": 4,
     "printWidth": 120
 }
