--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "nhentai",
         "hentai",
         "api",
-        "wrapper"
+        "wrapper",
+        "r18"
     ],
     "author": {
         "name": "DiamondMiner88",
@@ -31,16 +32,16 @@
     "devDependencies": {
         "@types/chai": "^4.2.14",
         "@types/chai-as-promised": "^7.1.3",
-        "@types/mocha": "^8.0.4",
+        "@types/mocha": "^8.2.0",
         "@types/node-fetch": "^2.5.7",
-        "@typescript-eslint/eslint-plugin": "^4.9.0",
-        "@typescript-eslint/parser": "^4.9.0",
+        "@typescript-eslint/eslint-plugin": "^4.11.0",
+        "@typescript-eslint/parser": "^4.11.0",
         "chai": "^4.2.0",
         "chai-as-promised": "^7.1.1",
-        "eslint": "^7.14.0",
+        "eslint": "^7.16.0",
         "mocha": "^8.2.1",
-        "ts-node": "^9.1.0",
-        "typescript": "^4.1.2"
+        "ts-node": "^9.1.1",
+        "typescript": "^4.1.3"
     },
     "repository": {
         "type": "git",
