--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "nhentai",
-    "version": "1.1.2",
-    "description": "An API wrapper for nhentai.net",
+    "version": "2.0.0",
+    "description": "A library for interacting with the nhentai API",
     "main": "lib/index.js",
     "types": "types/index.d.ts",
     "scripts": {
