--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "scripts": {
         "test": "mocha -t 10000 -r ts-node/register tests/*.spec.ts",
         "lint": "eslint -c .eslintrc --ext .ts src",
-        "build": "rm -rf lib/** && tsc"
+        "build": "rm -rf lib/** && tsc",
+        "docs": "typedoc --out docs src --exclude src/apitypes.d.ts"
     },
     "engines": {
         "node": ">=10.12.0"
@@ -38,9 +39,11 @@
         "@typescript-eslint/parser": "^4.11.0",
         "chai": "^4.2.0",
         "chai-as-promised": "^7.1.1",
+        "eledoc": "^0.2.1",
         "eslint": "^7.16.0",
         "mocha": "^8.2.1",
         "ts-node": "^9.1.1",
+        "typedoc": "^0.20.0",
         "typescript": "^4.1.3"
     },
     "repository": {
