--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "eledoc": "^0.2.1",
         "eslint": "^7.16.0",
         "mocha": "^8.2.1",
+        "release-it": "^14.2.2",
         "ts-node": "^9.1.1",
         "typedoc": "^0.20.5",
         "typescript": "^4.1.3"
