--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "nhentai",
-    "version": "2.0.0",
+    "version": "2.1.0",
     "description": "A library for interacting with the nhentai API",
     "main": "lib/index.js",
     "types": "lib/index.d.ts",
@@ -8,12 +8,8 @@
         "test": "mocha -t 10000 -r ts-node/register tests/*.spec.ts",
         "lint": "eslint -c .eslintrc --ext .ts src",
         "build": "rm -rf lib/** && tsc",
-        "docs": "typedoc --out docs src --exclude src/apitypes.d.ts"
+        "docs": "typedoc --out docs src"
     },
-    "engines": {
-        "node": ">=10.12.0"
-    },
-    "engineStrict": true,
     "keywords": [
         "nhentai",
         "hentai",
@@ -52,6 +48,7 @@
     "bugs": {
         "url": "https://github.com/DiamondMiner88/nhentai/issues"
     },
+    "homepage": "https://diamondminer88.github.io/nhentai/index.html",
     "files": [
         "lib/**/*"
     ]
