--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,11 @@
 {
     "compilerOptions": {
-        "target": "es5",
+        "target": "es6",
         "module": "commonjs",
         "outDir": "./lib",
         "strict": true,
-        "declaration": true
+        "declaration": true,
+        "removeComments": true
     },
     "include": ["src"]
 }
