--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "test": "mocha -t 20000 -r ts-node/register tests/*.spec.ts",
         "lint": "eslint -c .eslintrc --ext .ts src",
         "build": "rm -rf lib/** && tsc",
-        "docs": "typedoc --out docs src"
+        "docs": "typedoc --out docs --exclude src/index.ts src"
     },
     "keywords": [
         "nhentai",
