--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "types": "lib/index.d.ts",
     "scripts": {
         "test": "mocha -t 20000 -r ts-node/register tests/*.spec.ts",
-        "lint": "eslint -c .eslintrc --ext .ts src",
+        "lint": "eslint -c .eslintrc --ext .ts --fix src",
         "build": "rm -rf lib/** && tsc",
         "docs": "typedoc --out docs --exclude src/index.ts src"
     },
@@ -26,20 +26,20 @@
         "node-fetch": "^2.6.1"
     },
     "devDependencies": {
-        "@types/chai": "^4.2.15",
-        "@types/chai-as-promised": "^7.1.3",
-        "@types/mocha": "^8.2.2",
-        "@types/node-fetch": "^2.5.8",
-        "@typescript-eslint/eslint-plugin": "^4.20.0",
-        "@typescript-eslint/parser": "^4.20.0",
+        "@types/chai": "^4.2.21",
+        "@types/chai-as-promised": "^7.1.4",
+        "@types/mocha": "^9.0.0",
+        "@types/node-fetch": "^2.5.12",
+        "@typescript-eslint/eslint-plugin": "^4.29.1",
+        "@typescript-eslint/parser": "^4.29.1",
         "chai": "^4.3.4",
         "chai-as-promised": "^7.1.1",
         "eledoc": "^0.2.1",
-        "eslint": "^7.23.0",
-        "mocha": "^8.3.2",
-        "ts-node": "^9.1.1",
-        "typedoc": "^0.20.34",
-        "typescript": "^4.2.3"
+        "eslint": "^7.32.0",
+        "mocha": "^9.0.3",
+        "ts-node": "^10.2.0",
+        "typedoc": "^0.21.5",
+        "typescript": "^4.3.5"
     },
     "repository": {
         "type": "git",
