--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "test": "mocha -t 20000 -r ts-node/register tests/*.spec.ts",
         "lint": "eslint -c .eslintrc --ext .ts --fix src",
         "build": "rm -rf lib/** && tsc",
-        "docs": "typedoc --out docs --exclude src/index.ts src"
+        "docs": "typedoc --out docs --exclude src/index.ts src",
+        "changelog": "npx conventional-changelog -p angular"
     },
     "keywords": [
         "nhentai",
@@ -34,6 +35,7 @@
         "@typescript-eslint/parser": "^4.29.1",
         "chai": "^4.3.4",
         "chai-as-promised": "^7.1.1",
+        "conventional-changelog-cli": "^2.1.1",
         "eledoc": "^0.2.1",
         "eslint": "^7.32.0",
         "mocha": "^9.0.3",
