--- a/.nycrc.json
+++ b/.nycrc.json
@@ -3,9 +3,9 @@
     "check-coverage": false,
     "extension": [".ts"],
     "include": ["**/*.ts"],
-    "exclude": ["coverage/**", "node_modules/**", "**/*.d.ts", "**/*.spec.ts"],
+    "exclude": ["coverage/**", "node_modules/**", "**/*.d.ts", "**/*.test.ts"],
     "sourceMap": true,
-    "reporter": ["html", "text", "text-summary"],
+    "reporter": ["html", "text"],
     "all": true,
     "instrument": true
 }
