--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
     "compilerOptions": {
         "target": "es6",
         "module": "commonjs",
-        "outDir": "./lib",
+        "lib": ["es6"],
+        "outDir": "./dist",
         "strict": true,
         "declaration": true,
         "removeComments": true
