--- a/.nycrc.json
+++ b/.nycrc.json
@@ -5,7 +5,7 @@
     "include": ["**/*.ts"],
     "exclude": ["coverage/**", "node_modules/**", "**/*.d.ts", "**/*.test.ts"],
     "sourceMap": true,
-    "reporter": ["html", "text"],
+    "reporter": ["html", "text", "json-summary"],
     "all": true,
     "instrument": true
 }
