--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"eledoc": "^0.2.1",
 		"eslint": "^8.6.0",
 		"husky": "^7.0.4",
+		"istanbul-badges-readme": "^1.8.1",
 		"mocha": "^9.1.3",
 		"nyc": "^15.1.0",
 		"prettier": "^2.5.1",
