feat: update deps & move to esm

--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
 	"name": "nhentai",
 	"version": "3.0.0",
 	"description": "A library for interacting with the nhentai API",
+	"type": "module",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"scripts": {
 		"test": "mocha -t 20000 --retries 1 -r ts-node/register tests/*.test.ts",
-		"lint": "eslint -c .eslintrc --ext .ts --fix src",
+		"lint": "eslint --ext .ts --fix src",
 		"build": "rm -rf dist/** && tsc",
 		"docs": "typedoc --out docs --exclude src/index.ts src",
 		"changelog": "npx conventional-changelog -p angular",
-		"prepare": "husky install",
+		"prepare": "husky",
 		"prettier": "prettier --write \"{src,tests}/*.ts\" \"package.json\"",
 		"coverage": "npx nyc npm run test"
 	},
@@ -26,29 +27,26 @@
 		"url": "https://github.com/DiamondMiner88/"
 	},
 	"license": "MIT",
-	"dependencies": {
-		"node-fetch": "^2.6.1"
-	},
 	"devDependencies": {
-		"@types/chai": "^4.3.0",
-		"@types/chai-as-promised": "^7.1.4",
-		"@types/mocha": "^9.0.0",
-		"@types/node-fetch": "^2.5.12",
-		"@typescript-eslint/eslint-plugin": "^5.9.1",
-		"@typescript-eslint/parser": "^5.9.1",
-		"chai": "^4.3.4",
-		"chai-as-promised": "^7.1.1",
-		"conventional-changelog-cli": "^2.2.2",
+		"@eslint/js": "^9.35.0",
+		"@types/chai": "^5.2.2",
+		"@types/chai-as-promised": "^8.0.2",
+		"@types/mocha": "^10.0.10",
+		"@types/node-fetch": "^2.6.13",
+		"chai": "^6.0.1",
+		"chai-as-promised": "^8.0.2",
+		"conventional-changelog-cli": "^5.0.0",
 		"eledoc": "^0.2.1",
-		"eslint": "^8.6.0",
-		"husky": "^7.0.4",
-		"istanbul-badges-readme": "^1.8.1",
-		"mocha": "^9.1.3",
-		"nyc": "^15.1.0",
-		"prettier": "^2.5.1",
-		"ts-node": "^10.4.0",
-		"typedoc": "^0.22.10",
-		"typescript": "^4.5.4"
+		"eslint": "^9.35.0",
+		"husky": "^9.1.7",
+		"istanbul-badges-readme": "^1.9.0",
+		"mocha": "^11.7.2",
+		"nyc": "^17.1.0",
+		"prettier": "^3.6.2",
+		"ts-node": "^10.9.2",
+		"typedoc": "^0.28.13",
+		"typescript": "^5.9.2",
+		"typescript-eslint": "^8.44.0"
 	},
 	"repository": {
 		"type": "git",
