--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"scripts": {
-		"test": "mocha -t 20000 --retries 1 -r ts-node/register tests/*.test.ts",
+		"test": "mocha -t 20000 --retries 1 --parallel -r ts-node/register tests/*.test.ts",
 		"lint": "eslint --ext .ts --fix src",
 		"build": "rm -rf dist/** && tsc",
 		"docs": "typedoc --out docs --exclude src/index.ts src",
-		"changelog": "npx conventional-changelog -p angular",
+		"changelog": "conventional-changelog -p angular",
 		"prepare": "husky",
 		"prettier": "prettier --write \"{src,tests}/*.ts\" \"package.json\"",
-		"coverage": "npx nyc npm run test"
+		"coverage": "nyc npm run test"
 	},
 	"keywords": [
 		"nhentai",
