--- a/.nycrc.json
+++ b/.nycrc.json
@@ -1,11 +1,7 @@
 {
-    "cache": false,
-    "check-coverage": false,
-    "extension": [".ts"],
-    "include": ["**/*.ts"],
-    "exclude": ["coverage/**", "node_modules/**", "**/*.d.ts", "**/*.test.ts"],
-    "sourceMap": true,
-    "reporter": ["html", "text", "json-summary"],
+	"extends": "@istanbuljs/nyc-config-typescript",
     "all": true,
-    "instrument": true
+	"include": ["src/**/*.ts"],
+	"extension": [".ts"],
+	"reporter": ["html", "text", "json-summary"]
 }
