--- a/package.json
+++ b/package.json
@@ -49,6 +49,9 @@
 		"typescript": "^5.9.2",
 		"typescript-eslint": "^8.44.0"
 	},
+	"optionalDependencies": {
+		"htmlparser2": "^10.0.0"
+	},
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/DiamondMiner88/nhentai.git"
